feat: Agregar estilos de ver contraseña en formularios de registro y confirmación de contraseña

--- a/pago.html
+++ b/pago.html
@@ -264,11 +264,11 @@
                     </div>
                     <div class="row gy-3">
                         <div class="col-md-6 form-group">
-                            <label for="Nombre-titular" class="form-label">Nombre en la tarjeta</label>
+                            <label for="Nombre-titular" class="form-label">Nombre del Titular</label>
                             <input type="text" class="form-control" id="Nombre-titular" name="Nombre-titular" placeholder="">
                         </div>
                         <div class="col-md-6 form-group">
-                            <label for="Numero-tarjeta" class="form-label">Número de tarjeta de crédito</label>
+                            <label for="Numero-tarjeta" class="form-label">Número de tarjeta</label>
                             <input type="text" class="form-control" id="Numero-tarjeta" name="Numero-tarjeta" placeholder="">
                         </div>
                         <div class="col-md-3 form-group">
