--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                 <div class="text-danger font-weight-bold d-flex" id="requerimiento-especial"><p class="requerimiento">Al menos un carácter especial</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>                                
                                 <div class="input-group">
                                     <input type="password" class="form-control fs-5" id="password-registro" name="password-registro" placeholder="Ingresa tu contraseña">
-                                    <button type="button" class="btn" id="ver-contrasena">
+                                    <button type="button" class="btn" id="boton-ver-contraseña">
                                         <img src="img/mostrar-pass.svg" alt="Mostrar contraseña" class="ver-contraseña mostrar-pass">
                                         <img src="img/ocultar-pass.svg" alt="Ocultar contraseña" class="ver-contraseña ocultar-pass">
                                     </button>
@@ -128,7 +128,7 @@
                                 <label for="password-registro-confirmar" class="form-label fs-4">Confirmar contraseña</label>
                                 <div class="input-group">
                                     <input type="password" class="form-control fs-5" id="password-registro-confirmar" name="password-registro-confirmar" placeholder="Confirma tu contraseña">
-                                    <button type="button" class="btn" id="ver-contrasena-confirmar">
+                                    <button type="button" class="btn" id="boton-ver-contraseña-confirmar">
                                         <img src="img/mostrar-pass.svg" alt="Mostrar contraseña" class="ver-contraseña mostrar-repass">
                                         <img src="img/ocultar-pass.svg" alt="Ocultar contraseña" class="ver-contraseña ocultar-repass">
                                     </button>
