Agrega estilos al menú lateral y valida campos de texto

--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
         </div>
     </header>
     <body>
+        <div id="mySidenav" class="sidenav">
+            <a class="d-flex justify-content-end " href="#" id="inventario"><img id="img-inventario" class="img-sidebar" src="img/inventario.svg" alt="inventario"><h2 id="text-inventario" hidden>Inventario</h2></a>
+            <a class="d-flex justify-content-end " href="#" id="pedidos"><img class="img-sidebar" src="img/pedidos.svg" alt="pedidos"><h2 id="text-pedidos" hidden>Pedidos</h2></a>
+            <a class="d-flex justify-content-end " href="#" id="usuarios"><img class="img-sidebar" src="img/usuarios.svg" alt="usuarios"><h2 id="text-usurio" hidden>Usuarios</h2></a>
+        </div>
         <main>
             <!-- Carousel -->
             <section id="section-1">
@@ -281,4 +286,5 @@
     <!-- Script -->
     <script src="js/scripts.js"></script>
     <script src="js/validaciones.js"></script>    
+    <script src="js/sidebar.js"></script>
 </html>
