--- a/pago.html
+++ b/pago.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyY3bxIioBHabCMOeT1HjfAFjC1kdA3eU&libraries=places&callback=initMap">
+    </script>
+
     <title>Pago</title>
 </head>
 
@@ -65,11 +68,13 @@
                         <form method="get" id="formulario-inicio-sesion" class="needs-validation" novalidate>
                             <div class="mb-3 form-group">
                                 <label for="usuario-inicio-sesion" class="form-label fs-4">Nombre de usuario</label>
-                                <input type="text" class="form-control fs-5" id="usuario-inicio-sesion" name="usuario-inicio-sesion" placeholder="Ingresa tu nombre de usuario" >
+                                <input type="text" class="form-control fs-5" id="usuario-inicio-sesion"
+                                    name="usuario-inicio-sesion" placeholder="Ingresa tu nombre de usuario">
                             </div>
                             <div class="mb-3 form-group">
                                 <label for="password-inicio-sesion" class="form-label fs-4">Contraseña</label>
-                                <input type="password" class="form-control fs-5" id="password-inicio-sesion" name="password-inicio-sesion" placeholder="Ingresa tu contraseña" >
+                                <input type="password" class="form-control fs-5" id="password-inicio-sesion"
+                                    name="password-inicio-sesion" placeholder="Ingresa tu contraseña">
                             </div>
                             <div class="d-grid gap-2">
                                 <button type="submit" class="btn btn-primary fs-4">Iniciar sesión</button>
@@ -99,23 +104,44 @@
                         <form method="get" id="formulario-registro" class="needs-validation">
                             <div class="mb-3 form-group">
                                 <label for="usuario-registro" class="form-label fs-4">Nombre de usuario</label>
-                                <input type="text" class="form-control fs-5" id="usuario-registro" name="usuario-registro" placeholder="Ingresa tu nombre de usuario">
+                                <input type="text" class="form-control fs-5" id="usuario-registro"
+                                    name="usuario-registro" placeholder="Ingresa tu nombre de usuario">
                             </div>
                             <div class="mb-3 form-group">
                                 <label for="email-registro" class="form-label fs-4">Email</label>
-                                <input type="email"  class="form-control fs-5" id="email-registro" name="email-registro" placeholder="Ingresa tu email" required>                            </div>
+                                <input type="email" class="form-control fs-5" id="email-registro" name="email-registro"
+                                    placeholder="Ingresa tu email" required>
+                            </div>
                             <div class="mb-3 form-group">
                                 <label for="password-registro" class="form-label fs-4">Contraseña</label>
-                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-longitud"><p class="requerimiento">Al menos 8 caracteres</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>
-                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-mayuscula"><p class="requerimiento">Al menos una letra mayúscula</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>
-                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-minuscula"><p class="requerimiento">Al menos una letra minúscula</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>
-                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-numero"><p class="requerimiento">Al menos un número</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>
-                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-especial"><p class="requerimiento">Al menos un carácter especial</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>                                
-                                <input type="password" class="form-control fs-5" id="password-registro" name="password-registro" placeholder="Ingresa tu contraseña">
+                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-longitud">
+                                    <p class="requerimiento">Al menos 8 caracteres</p><img class="validador"
+                                        src="img/empty-svgrepo-com.svg">
+                                </div>
+                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-mayuscula">
+                                    <p class="requerimiento">Al menos una letra mayúscula</p><img class="validador"
+                                        src="img/empty-svgrepo-com.svg">
+                                </div>
+                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-minuscula">
+                                    <p class="requerimiento">Al menos una letra minúscula</p><img class="validador"
+                                        src="img/empty-svgrepo-com.svg">
+                                </div>
+                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-numero">
+                                    <p class="requerimiento">Al menos un número</p><img class="validador"
+                                        src="img/empty-svgrepo-com.svg">
+                                </div>
+                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-especial">
+                                    <p class="requerimiento">Al menos un carácter especial</p><img class="validador"
+                                        src="img/empty-svgrepo-com.svg">
+                                </div>
+                                <input type="password" class="form-control fs-5" id="password-registro"
+                                    name="password-registro" placeholder="Ingresa tu contraseña">
                             </div>
                             <div class="mb-3">
-                                <label for="password-registro-confirmar" class="form-label fs-4">Confirmar contraseña</label>
-                                <input type="password" class="form-control fs-5" id="password-registro-confirmar" name="password-registro-confirmar" placeholder="Confirma tu contraseña" required>
+                                <label for="password-registro-confirmar" class="form-label fs-4">Confirmar
+                                    contraseña</label>
+                                <input type="password" class="form-control fs-5" id="password-registro-confirmar"
+                                    name="password-registro-confirmar" placeholder="Confirma tu contraseña" required>
                             </div>
                             <div class="d-grid gap-2">
                                 <button type="submit" class="btn btn-primary fs-4">Registrarse</button>
@@ -186,7 +212,8 @@
                 </ul>
                 <form class="card p-2">
                     <div class="input-group">
-                        <input type="text" class="form-control" id="codigo-promo" name="codigo-promo" placeholder="Código Promo">
+                        <input type="text" class="form-control" id="codigo-promo" name="codigo-promo"
+                            placeholder="Código Promo">
                         <button type="submit" class="btn btn-secondary">Aplicar</button>
                     </div>
                 </form>
@@ -196,11 +223,13 @@
                     <div class="row g-3">
                         <div class="col-sm-6 form-group">
                             <label for="Primer-nombre-pago" class="form-label">Nombre</label>
-                            <input type="text" class="form-control" id="Primer-nombre-pago" name="Primer-nombre-pago" placeholder="">
+                            <input type="text" class="form-control" id="Primer-nombre-pago" name="Primer-nombre-pago"
+                                placeholder="">
                         </div>
                         <div class="col-sm-6 form-group">
                             <label for="Apellido-pago" class="form-label">Apellido</label>
-                            <input type="text" class="form-control" id="Apellido-pago" name="Apellido-pago" placeholder="">
+                            <input type="text" class="form-control" id="Apellido-pago" name="Apellido-pago"
+                                placeholder="">
                         </div>
                         <div class="col-12 form-group">
                             <label for="rut" class="form-label">Rut</label>
@@ -209,11 +238,13 @@
                         <div class="col-12 form-group">
                             <label for="Email-pago" class="form-label">Email <span
                                     class="text-muted">(Opcional)</span></label>
-                            <input type="email" class="form-control" id="Email-pago" name="Email-pago" placeholder="tu@example.com">
+                            <input type="email" class="form-control" id="Email-pago" name="Email-pago"
+                                placeholder="tu@example.com">
                         </div>
                         <div class="col-12 form-group">
                             <label for="Direccion-pago" class="form-label">Dirección</label>
-                            <input type="text" class="form-control" id="Direccion-pago" name="Direccion-pago" placeholder="Paicavi 123">
+                            <input type="text" class="form-control" id="Direccion-pago" name="Direccion-pago"
+                                placeholder="Paicavi 123">
                         </div>
                         <div class="col-md-5 form-group">
                             <label for="Region" class="form-label">Region</label>
@@ -265,23 +296,27 @@
                     <div class="row gy-3">
                         <div class="col-md-6 form-group">
                             <label for="Nombre-titular" class="form-label">Nombre del Titular</label>
-                            <input type="text" class="form-control" id="Nombre-titular" name="Nombre-titular" placeholder="">
+                            <input type="text" class="form-control" id="Nombre-titular" name="Nombre-titular"
+                                placeholder="">
                         </div>
                         <div class="col-md-6 form-group">
                             <label for="Numero-tarjeta" class="form-label">Número de tarjeta</label>
-                            <input type="text" class="form-control" id="Numero-tarjeta" name="Numero-tarjeta" placeholder="">
+                            <input type="text" class="form-control" id="Numero-tarjeta" name="Numero-tarjeta"
+                                placeholder="">
                         </div>
                         <div class="col-md-3 form-group">
                             <label for="Fecha-expiracion" class="form-label">Vencimiento</label>
-                            <input type="text" class="form-control" id="Fecha-expiracion" name="Fecha-expiracion" placeholder="MM/YY">
+                            <input type="text" class="form-control" id="Fecha-expiracion" name="Fecha-expiracion"
+                                placeholder="MM/YY">
                         </div>
                         <div class="col-md-3 form-group">
                             <label for="cvv" class="form-label">CVV</label>
-                            <input type="text" class="form-control" id="cvv" name="cvv" >
+                            <input type="text" class="form-control" id="cvv" name="cvv">
                         </div>
                     </div>
                     <hr class="my-4">
-                    <button type="submit" class="w-100 btn btn-primary btn-lg" id="boton-pago">Continuar con el pago</button>
+                    <button type="submit" class="w-100 btn btn-primary btn-lg" id="boton-pago">Continuar con el
+                        pago</button>
                 </form>
             </div>
         </div>
