--- a/carrito.html
+++ b/carrito.html
@@ -190,8 +190,8 @@
                                             <i class="fas fa-minus"></i>
                                         </button>
 
-                                        <input id="form1" min="0" name="quantity" value="2" type="number"
-                                            class="form-control form-control-sm" />
+                                        <input id="form1" min="1" max="99" name="quantity" type="number"
+                                            class="form-control form-control-sm cantidad" />
 
                                         <button data-mdb-button-init data-mdb-ripple-init class="btn btn-link px-2"
                                             onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
@@ -226,8 +226,8 @@
                                             <i class="fas fa-minus"></i>
                                         </button>
 
-                                        <input id="form1" min="0" name="quantity" value="2" type="number"
-                                            class="form-control form-control-sm" />
+                                        <input id="form2" min="1" max="99" name="quantity" type="number"
+                                            class="form-control form-control-sm cantidad" />
 
                                         <button data-mdb-button-init data-mdb-ripple-init class="btn btn-link px-2">
                                             <i class="fas fa-plus"></i>
@@ -346,6 +346,5 @@
 <!-- Script -->
 <script src="js/scripts.js"></script>
 <script src="js/validaciones.js"></script>
-
 
 </html>
