--- a/producto.html
+++ b/producto.html
@@ -221,9 +221,9 @@
                         <p class="precio-producto my-4">Precio del producto</p>
                         <div class="row">
                             <form>
-                                <div class="col my-4">
+                                <div class="col-2 my-4">
                                     <label for="cantidad">Cantidad</label>
-                                    <input type="number" class="form-control" id="cantidad" name="cantidad" min="1">
+                                    <input type="number" class="form-control cantidad" id="cantidad" name="cantidad" min="1" max="99">
                                 </div>
                                 <div class="col my-5">
                                     <button type="submit" class="btn btn-primary">Agregar al carrito</button>
