feat: Agregar validación de solo letras en el campo de nombre

--- a/inventario.html
+++ b/inventario.html
@@ -493,7 +493,7 @@
                                     <div class="form-group">
                                         <label for="stock-Producto-Editar">Stock</label>
                                         <input type="number" class="form-control" id="stock-Producto-Editar"
-                                            name="subcategoria-Producto-Editar"
+                                            name="stock-Producto-Editar"
                                             placeholder="Ingrese el stock del producto">
                                     </div>
                                 </div>
@@ -548,9 +548,9 @@
                                         data-bs-dismiss="modal">Cerrar</button>
                                     <button type="submit" class="btn btn-primary">Guardar cambios</button>
                                 </div>
+                            </div>
                         </form>
                     </div>
-
                 </div>
             </div>
         </div>
