--- a/perfil.html
+++ b/perfil.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="css/perfil.css" />
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/sidenav.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
-
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyY3bxIioBHabCMOeT1HjfAFjC1kdA3eU&libraries=places&callback=initMap">
+    </script>
     <title>Perfil</title>
 </head>
 <header>
