--- a/carrito.html
+++ b/carrito.html
@@ -206,117 +206,97 @@
             </div>
         </section>
         <section class="h-100">
-            <div class="container py-5">
-                <div class="row d-flex justify-content-center my-4">
-                    <div class="col-md-8">
-                        <div class="card rounded-3 mb-4">
-                            <div class="card-body p-4">
-                                <div class="row d-flex justify-content-between align-items-center">
-                                    <div class="col-md-2 col-lg-2 col-xl-2">
-                                        <img src="img/planta-imagen1.jpeg" class="img-fluid rounded-3"
-                                            alt="planta-imagen1">
-                                    </div>
-                                    <div class="col-md-3 col-lg-3 col-xl-3">
-                                        <p class="lead fw-normal mb-2">Nombre del producto</p>
-                                        <p><span class="text-muted">Categoria: </span>------ <span
-                                                class="text-muted">Tipo: </span>----</p>
-                                    </div>
-                                    <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
-                                        <button data-mdb-button-init data-mdb-ripple-init class="btn btn-link px-2"
-                                            onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                                            <i class="fas fa-minus"></i>
-                                        </button>
-
-                                        <input id="form1" min="1" max="99" name="quantity" type="number"
-                                            class="form-control form-control-sm cantidad" />
-
-                                        <button data-mdb-button-init data-mdb-ripple-init class="btn btn-link px-2"
-                                            onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                                            <i class="fas fa-plus"></i>
-                                        </button>
-                                    </div>
-                                    <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                                        <h5 class="mb-0">$499.00</h5>
-                                    </div>
-                                    <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                                        <a href="#!">
-                                            <img class="basurero" src="img/basurero.svg" alt="Eliminar producto" />
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card rounded-3 mb-4">
-                            <div class="card-body p-4">
-                                <div class="row d-flex justify-content-between align-items-center">
-                                    <div class="col-md-2 col-lg-2 col-xl-2">
-                                        <img src="img/planta-imagen1.jpeg" class="img-fluid rounded-3"
-                                            alt="planta-imagen1">
-                                    </div>
-                                    <div class="col-md-3 col-lg-3 col-xl-3">
-                                        <p class="lead fw-normal mb-2">Nombre del producto</p>
-                                        <p><span class="text-muted">Categoria: </span>------ <span
-                                                class="text-muted">Tipo: </span>----</p>
-                                    </div>
-                                    <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
-                                        <button data-mdb-button-init data-mdb-ripple-init class="btn btn-link px-2">
-                                            <i class="fas fa-minus"></i>
-                                        </button>
-
-                                        <input id="form2" min="1" max="99" name="quantity" type="number"
-                                            class="form-control form-control-sm cantidad" />
-
-                                        <button data-mdb-button-init data-mdb-ripple-init class="btn btn-link px-2">
-                                            <i class="fas fa-plus"></i>
-                                        </button>
-                                    </div>
-                                    <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                                        <h5 class="mb-0">$499.00</h5>
-                                    </div>
-                                    <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                                        <a href="#!">
-                                            <img class="basurero" src="img/basurero.svg" alt="Eliminar producto" />
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4">
-                            <div class="card-header py-3">
-                                <h5 class="mb-0">Resumen</h5>
-                            </div>
-                            <div class="card-body">
-                                <ul class="list-group list-group-flush">
-                                    <li
-                                        class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                                        Producto 1
-                                        <span>$00000</span>
-                                    </li>
-                                    <li
-                                        class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                                        Producto 2
-                                        <span>$0000</span>
-                                    </li>
-                                    <li
-                                        class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
-                                        <div>
-                                            <strong>Total</strong>
+            <form id="formulario-carrito">
+                <div class="container py-5">
+                    <div class="row d-flex justify-content-center my-4">
+                        <div class="col-md-8">
+                            <div class="card rounded-3 mb-4">
+                                <div class="card-body p-4">
+                                    <div class="row d-flex justify-content-between align-items-center">
+                                        <div class="col-md-2 col-lg-2 col-xl-2">
+                                            <img src="img/planta-imagen1.jpeg" class="img-fluid rounded-3"
+                                                alt="planta-imagen1">
                                         </div>
-                                        <span><strong>$0000</strong></span>
-                                    </li>
-                                </ul>
-                                <button type="button" data-mdb-button-init data-mdb-ripple-init
-                                    class="btn btn-primary btn-lg btn-block"><a class="text-white" href="pago.html">
-                                        Ir a pagar
-                                    </a>
-                                </button>
+                                        <div class="col-md-3 col-lg-3 col-xl-3">
+                                            <p class="lead fw-normal mb-2">Nombre del producto</p>
+                                            <p><span class="text-muted">Categoria: </span>------ <span
+                                                    class="text-muted">Tipo: </span>----</p>
+                                        </div>
+                                        <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
+                                            <input type="number" class="form-control cantidad" id="cantidad" name="cantidad" min="1" max="99">
+                                        </div>
+                                        <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
+                                            <h5 class="mb-0">$499.00</h5>
+                                        </div>
+                                        <div class="col-md-1 col-lg-1 col-xl-1 text-end">
+                                            <a href="#!">
+                                                <img class="basurero" src="img/basurero.svg" alt="Eliminar producto" />
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card rounded-3 mb-4">
+                                <div class="card-body p-4">
+                                    <div class="row d-flex justify-content-between align-items-center">
+                                        <div class="col-md-2 col-lg-2 col-xl-2">
+                                            <img src="img/planta-imagen1.jpeg" class="img-fluid rounded-3"
+                                                alt="planta-imagen1">
+                                        </div>
+                                        <div class="col-md-3 col-lg-3 col-xl-3">
+                                            <p class="lead fw-normal mb-2">Nombre del producto</p>
+                                            <p><span class="text-muted">Categoria: </span>------ <span
+                                                    class="text-muted">Tipo: </span>----</p>
+                                        </div>
+                                        <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
+                                            <input type="number" class="form-control cantidad" id="cantidad" name="cantidad" min="1" max="99">
+                                        </div>
+                                        <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
+                                            <h5 class="mb-0">$499.00</h5>
+                                        </div>
+                                        <div class="col-md-1 col-lg-1 col-xl-1 text-end">
+                                            <a href="#!">
+                                                <img class="basurero" src="img/basurero.svg" alt="Eliminar producto" />
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card mb-4">
+                                <div class="card-header py-3">
+                                    <h5 class="mb-0">Resumen</h5>
+                                </div>
+                                <div class="card-body">
+                                    <ul class="list-group list-group-flush">
+                                        <li
+                                            class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                                            Producto 1
+                                            <span>$00000</span>
+                                        </li>
+                                        <li
+                                            class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                                            Producto 2
+                                            <span>$0000</span>
+                                        </li>
+                                        <li
+                                            class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
+                                            <div>
+                                                <strong>Total</strong>
+                                            </div>
+                                            <span><strong>$0000</strong></span>
+                                        </li>
+                                    </ul>
+                                    <button type="submit"
+                                        class="btn btn-primary btn-lg btn-block">Pagar
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </form>
         </section>
         <section class="d-flex justify-content-center">
             <div class="container m-3 text-center">
